2013-12-11  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/package.el (finder-list-matches):
	Autoload rather than falsely declaring.

2013-12-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* net/eww.el (eww-exit, eww-close): Add UI convenience wrappers.
	(eww-mode-map): Use them.

2013-12-11  Martin Rudalics  <rudalics@gmx.at>

	* window.el (display-buffer-in-side-window): Fix doc-string
	(Bug#16115).

2013-12-11  Juanma Barranquero  <lekktu@gmail.com>

	* vc/vc-git.el: Silence byte-compiler warnings.
	(vc-git-dir-extra-headers): Rename arg _dir which is no longer ignored.
	(log-edit-set-header): Declare.

2013-12-11  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in (custom-deps, finder-data): Run output file names
	through unmsys--file-name.  (Bug#16099)

2013-12-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el (smie-indent--hanging-p): Don't bother matching
	comment-start-skip, since it fails when that uses submatch 1 (bug#16041).

	* emulation/cua-base.el (cua-paste): Add `delete-selection' property
	instead of deleting the selection "by hand" (bug#16098).
	Rely on insert-for-yank to yank rectangles.
	(cua-highlight-region-shift-only): Mark obsolete.
	(cua-mode): Don't enable/disable transient-mark-mode,
	shift-select-mode (cua-mode works both with and without them), and
	pc-selection-mode (obsolete).
	* emulation/cua-rect.el (cua--activate-rectangle): Activate the mark.
	(cua--deactivate-rectangle): Deactivate it.

	* delsel.el (delete-selection-mode): Don't enable transient-mark-mode.
	(delete-selection-helper): Make sure yank starts at the top of the
	deleted region.
	(minibuffer-keyboard-quit): Use region-active-p.

	* emacs-lisp/trace.el (trace-make-advice): Don't deactivate the mark.

	* simple.el (normal-erase-is-backspace-mode): Map kp-delete identically
	to `delete' (bug#16109).

2013-12-11  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>

	* progmodes/octave.el (octave-mode, inferior-octave-mode): Link to